[package]
name = "keychains_rs"
version = "0.1.0"
authors = ["Prateek Banerjee"]
edition = "2024"
categories = ["cryptography"]
keywords = ["cryptography"]

[lib]
path = "src/lib.rs"

[dependencies]
hkdf = "0.12.4"
sha2 = "0.10.9"
sha3 = "0.10.8"
ascon-hash = "=0.3.1"
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.8.5"
thiserror = "2.0.16"
rusqlite = "0.37.0"
